--- a/Gopaddi/EditMain.storyboard
+++ b/Gopaddi/EditMain.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="59" width="430" height="64"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ilp-p4-pT0">
-                                        <rect key="frame" x="41" y="22.666666666666671" width="150" height="25"/>
+                                        <rect key="frame" x="53" y="22.666666666666671" width="150" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="VjB-pi-OHx"/>
                                             <constraint firstAttribute="width" constant="150" id="a9M-AM-AgF"/>
@@ -31,10 +31,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mJb-1Z-xMK">
-                                        <rect key="frame" x="8" y="26" width="18" height="18"/>
+                                        <rect key="frame" x="8" y="20" width="30" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="18" id="OOy-8t-cwI"/>
-                                            <constraint firstAttribute="width" constant="18" id="cdj-cU-i5c"/>
+                                            <constraint firstAttribute="height" constant="30" id="OOy-8t-cwI"/>
+                                            <constraint firstAttribute="width" constant="30" id="cdj-cU-i5c"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="ArrowLeft"/>
@@ -814,7 +814,7 @@
                                             <!--2024-02-29 11:40:44 +0000-->
                                         </date>
                                     </datePicker>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="leK-eq-UNE" customClass="borderWidth">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="leK-eq-UNE">
                                         <rect key="frame" x="176.66666666666663" y="355" width="156.33333333333337" height="40"/>
                                         <color key="backgroundColor" name="AccentColor"/>
                                         <constraints>
@@ -828,6 +828,9 @@
                                                 <integer key="value" value="5"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="CooseDateButton:" destination="SUz-q1-vvO" eventType="touchUpInside" id="8fk-w0-rhd"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xhr-cs-8iJ">
                                         <rect key="frame" x="10" y="355" width="156.66666666666666" height="40"/>
