--- a/Gopaddi/VC/MainVC/Reactions/Cells/ReactionCountCell.xib
+++ b/Gopaddi/VC/MainVC/Reactions/Cells/ReactionCountCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,27 +20,27 @@
                         <rect key="frame" x="5" y="5" width="108" height="134"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="all" translatesAutoresizingMaskIntoConstraints="NO" id="2Ve-wI-bmz">
-                                <rect key="frame" x="29" y="20" width="50" height="50"/>
+                                <rect key="frame" x="39" y="5" width="30" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="9BT-DJ-OKX"/>
-                                    <constraint firstAttribute="height" constant="50" id="vUj-Hi-kcS"/>
+                                    <constraint firstAttribute="width" constant="30" id="9BT-DJ-OKX"/>
+                                    <constraint firstAttribute="height" constant="30" id="vUj-Hi-kcS"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mDA-2K-A1C">
-                                <rect key="frame" x="44" y="100" width="20.333333333333329" height="20"/>
+                                <rect key="frame" x="45.666666666666664" y="45" width="17" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="oZ0-mB-pKL"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.85773056029999994" green="0.9924208269" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="mDA-2K-A1C" firstAttribute="top" secondItem="2Ve-wI-bmz" secondAttribute="bottom" constant="30" id="NG5-Ka-hev"/>
+                            <constraint firstItem="mDA-2K-A1C" firstAttribute="top" secondItem="2Ve-wI-bmz" secondAttribute="bottom" constant="10" id="NG5-Ka-hev"/>
                             <constraint firstItem="2Ve-wI-bmz" firstAttribute="centerX" secondItem="Bzk-O0-A6P" secondAttribute="centerX" id="Rzx-6S-9no"/>
-                            <constraint firstItem="2Ve-wI-bmz" firstAttribute="top" secondItem="Bzk-O0-A6P" secondAttribute="top" constant="20" id="Wef-sZ-ULQ"/>
+                            <constraint firstItem="2Ve-wI-bmz" firstAttribute="top" secondItem="Bzk-O0-A6P" secondAttribute="top" constant="5" id="Wef-sZ-ULQ"/>
                             <constraint firstItem="mDA-2K-A1C" firstAttribute="centerX" secondItem="Bzk-O0-A6P" secondAttribute="centerX" id="vZU-fK-BzQ"/>
                         </constraints>
                     </view>
